Bug 249499 - "Could Not Authenticate"- Dialog: Buttons do not match text
Summary: "Could Not Authenticate"- Dialog: Buttons do not match text
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-30 12:21 UTC by Felix Wolfsteller
Modified: 2011-02-15 18:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-08-30 12:21:49 UTC
The dialog "Could Not Authenticate - Akonadi Resource" (I am not sure where and why it popped up) reads:

"The server refused the supplied username and passwod. Do you want to go the settings, have another attemot at logging in, or do nothing?" [...]

The buttons are labelled "Single Input" and "Settings" (in this order).

It is not immediately clear, which button to press to achieve which of the given options in text.


"Settings" might be "Account Settings", "Single Input" "Try Again".
Comment 1 Tobias Koenig 2010-12-07 14:28:08 UTC
We can't change that right now because of string freeze
Comment 2 Tobias Koenig 2011-01-06 20:31:46 UTC
commit ce69d39e4a6120d2f77394a4337f0267ed0e8dea
branch master
Author: Tobias Koenig <tokoe@kde.org>
Date:   Thu Jan 6 20:34:32 2011 +0100

    Change button label to more meaningfull text
    
    BUG: 249499

diff --git a/resources/imap/settingspasswordrequester.cpp b/resources/imap/settingspasswordrequester.cpp
index ad0b400..4d0c217 100644
--- a/resources/imap/settingspasswordrequester.cpp
+++ b/resources/imap/settingspasswordrequester.cpp
@@ -57,8 +57,8 @@ void SettingsPasswordRequester::askUserInput( const QString &serverError )
                                                      "at logging in, or do nothing?\n\n"
                                                      "%1", serverError ),
                                                i18n( "Could Not Authenticate" ),
-                                               KGuiItem( i18n( "Settings" ) ),
-                                               KGuiItem( i18nc( "Input username/password manually and not store them", "Single Input" ) ) );
+                                               KGuiItem( i18n( "Account Settings" ) ),
+                                               KGuiItem( i18nc( "Input username/password manually and not store them", "Try Again" ) ) );
 
   if ( i == KMessageBox::Yes ) {
     int result = m_resource->configureDialog( m_resource->winIdForDialogs() );
diff --git a/resources/pop3/pop3resource.cpp b/resources/pop3/pop3resource.cpp
index 68dad58..85c6f8f 100644
--- a/resources/pop3/pop3resource.cpp
+++ b/resources/pop3/pop3resource.cpp
@@ -530,8 +530,8 @@ void POP3Resource::loginJobResult( KJob *job )
                                         "at logging in, or do nothing?\n\n"
                                         "%1", job->errorString() ),
                                   i18n( "Could Not Authenticate" ),
-                                  KGuiItem( i18n( "Settings" ) ),
-                                  KGuiItem( i18nc( "Input username/password manually and not store them", "Single Input" ) ) );
+                                  KGuiItem( i18n( "Account Settings" ) ),
+                                  KGuiItem( i18nc( "Input username/password manually and not store them", "Try Again" ) ) );
     mErrorDialogShown = false;
     if ( i == KMessageBox::Yes ) {
       configure( winIdForDialogs() );