Change button label to more meaningfull text

BUG: 249499