resources/pop3/pop3resource.cpp
@@ -530,8 +530,8 @@ void POP3Resource::loginJobResult( KJob *job )
                                         "at logging in, or do nothing?\n\n"
                                         "%1", job->errorString() ),
                                   i18n( "Could Not Authenticate" ),
-                                  KGuiItem( i18n( "Settings" ) ),
-                                  KGuiItem( i18nc( "Input username/password manually and not store them", "Single Input" ) ) );
+                                  KGuiItem( i18n( "Account Settings" ) ),
+                                  KGuiItem( i18nc( "Input username/password manually and not store them", "Try Again" ) ) );
     mErrorDialogShown = false;
     if ( i == KMessageBox::Yes ) {
       configure( winIdForDialogs() );
